--- a/cfg/MSRetinex.cfg
+++ b/cfg/MSRetinex.cfg
@@ -1,11 +1,11 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 
-PACKAGE = "RRetinex"
+PACKAGE = "rretinex"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("variance_list", int_t, 0, "Variance list |s_1|s_2|..|s_n|", "10|0|1000")
+gen.add("variance_list", str_t, 0, "Variance list |s_1|s_2|..|s_n|", "10|0|1000")
 
-exit(gen.generate(PACKAGE, "MultiScaleRetinex", "VarianceSet"))
+exit(gen.generate(PACKAGE, "SingleScaleRetinex", "MSRetinex"))
