--- a/cfg/SSRetinex.cfg
+++ b/cfg/SSRetinex.cfg
@@ -1,6 +1,6 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 
-PACKAGE = "RRetinex"
+PACKAGE = "rretinex"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -8,4 +8,4 @@ gen = ParameterGenerator()
 
 gen.add("variance", int_t, 0, "Variance", 10, 0, 1000)
 
-exit(gen.generate(PACKAGE, "SingleScaleRetinex", "VarianceSet"))
+exit(gen.generate(PACKAGE, "SingleScaleRetinex", "SSRetinex"))
